# anvil-embodied-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.eval.yml  docker-compose.fake-hardware.yml  docker-compose.mockdist.yml  docker-compose.yml  lerobot-v0.5.0-integration-status.md  pyproject.toml  tmp.sh
.github/workflows/: ci.yml  docker.yml  release.yml
configs/cyclonedds/: gpu_pc.xml  robot_pc.xml  test_bridge.xml
configs/lerobot_control/: inference_default.yaml  inference_eval.yaml  inference_single_arm.yaml  test_fake_hardware.yaml  test_mockdist.yaml
configs/lerobot_training/: act_default.yaml
configs/mcap_converter/: openarm_bimanual.yaml  openarm_bimanual_quest.yaml  openarm_single_quest.yaml
data/: README.md
data/datasets/test/: conversion_config.yaml
data/raw/test-session/0001/: 0001_0.mcap
data/raw/test-session/0002/: 0002_0.mcap
data/raw/test-session/0003/: 0003_0.mcap
debug_logs/: run1.csv
docker/inference/: Dockerfile  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
docker/neuracore/: Dockerfile
docs/: architecture.md  data-collection.md  deployment-guide.md  extending-to-new-robots.md  getting-started.md  training-guide.md  training-tips.md
docs/claude_journal/: 20260225-1200-Beautify-mcap-convert-CLI-Rich.md
model_zoo/: README.md
model_zoo/test/dummy_model/: config.json  inference.yaml
model_zoo/test/test-diffusion/: split_info.json
ros2/src/lerobot_control/: package.xml  setup.cfg  setup.py
ros2/src/lerobot_control/launch/: inference.launch.py
ros2/src/lerobot_control/lerobot_control/: __init__.py  action_limiter.py  delta_restore.py  eval_recorder_node.py  image_converter.py  image_worker.py  inference_monitor_node.py  inference_node.py  mcap_player_node.py  metrics_tracker.py  model_loader.py  observation_manager.py  shared_image_buffer.py
ros2/src/neuracore_control/launch/: inference.launch.py
ros2/src/neuracore_control/neuracore_control/: common.py  inference_node.py
ros2/src/neuracore_control/scripts/: plot_predictions.py
scripts/: build-docker.sh  convert-dataset.sh  download-models.sh  generate-test-model.py  lint.sh  pipeline_smoke_test.py  plot_monitor_csv.py  run_inference.sh  setup-dev.sh  test-distributed.sh  test.sh
tests/smoke/scripts/: pipeline_smoke_test.py
tests/unit/anvil_trainer/: test_split_patches.py
(+10 files in other folders)
